updated images to slideshow

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <title>Edinglassie</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel="stylesheet" href="css/style.css">
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"/>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans%3A400%2C400italic%2C600%2C700%2C700italic%7COswald%3A400%2C300%7CVollkorn%3A400%2C400italic">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -21,32 +25,33 @@
   }
 </script>
 </head>
-<body translate="no">
 
-  <main class="main-content">
+<body>
+
+ <main class="main-content">
   <section class="slideshow">
     <div class="slideshow-inner">
       <div class="slides">
-        <div class="slide is-loaded is-active">
-          <div class="slide-content" style="right: auto;">
+        <div class="slide is-active ">
+          <div class="slide-content">
             <div class="caption">
-              <div class="title" >Slide title 1</div>
-              <div class="text" >
+              <div class="title">Slide title 1</div>
+              <div class="text">
                 <p>Slide description 1</p>
               </div> 
-              <a href="#" class="btn" >
+              <a href="#" class="btn">
                 <span class="btn-inner">Learn More</span>
               </a>
             </div>
           </div>
-          <div class="image-container" > 
-            <img src="images/dou.JPG" alt="" class="image">
+          <div class="image-container"> 
+            <img src="images/bullocks.JPG" alt="" class="image" />
           </div>
         </div>
-        <div class="slide is-loaded" style="right: 0px;">
-          <div class="slide-content" style="right: 0px;">
+        <div class="slide">
+          <div class="slide-content">
             <div class="caption">
-              <div class="title" >Slide title 2</div>
+              <div class="title">Slide title 2</div>
               <div class="text">
                 <p>Slide description 2</p>
               </div> 
@@ -56,29 +61,29 @@
             </div>
           </div>
           <div class="image-container">
-            <img src="images/lapwing.jpeg" alt="" class="image">
+            <img src="images/dou.JPG" alt="" class="image" />
           </div>
         </div>
-        <div class="slide is-loaded" style="right: 0px;">
-          <div class="slide-content" style="right: 0px;">
+        <div class="slide">
+          <div class="slide-content">
             <div class="caption">
-              <div class="title" >Slide title 3</div>
+              <div class="title">Slide title 3</div>
               <div class="text">
                 <p>Slide description 3</p>
               </div> 
-              <a href="#" class="btn" >
+              <a href="#" class="btn">
                 <span class="btn-inner">Learn More</span>
               </a>
             </div>
           </div>
-          <div class="image-container" >
-            <img src="images/cattle.JPG" alt="" class="image">
+          <div class="image-container">
+            <img src="images/bullocks.JPG" alt="" class="image" />
           </div>
         </div>
-        <div class="slide is-loaded" style="right: 0px;">
-          <div class="slide-content" style="right: 0px;">
+        <div class="slide">
+          <div class="slide-content">
             <div class="caption">
-              <div class="title" >Slide title 4</div>
+              <div class="title">Slide title 4</div>
               <div class="text">
                 <p>Slide description 4</p>
               </div> 
@@ -88,7 +93,7 @@
             </div>
           </div>
           <div class="image-container"> 
-            <img src="images/cattle.JPG" alt="" class="image">
+            <img src="images/cattle.JPG" alt="" class="image" />
           </div>
         </div>
       </div>
@@ -108,14 +113,14 @@
       </div>
       <div class="arrows">
         <div class="arrow prev">
-          <span class="svg svg-arrow-left">
-            <svg version="1.1" id="svg4-Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="14px" height="26px" viewBox="0 0 14 26" enable-background="new 0 0 14 26" xml:space="preserve"> </svg>
+          <span class="svg svg-arrow-left"></span>
+            <svg version="1.1" id="svg4-Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="14px" height="26px" viewBox="0 0 14 26" enable-background="new 0 0 14 26" xml:space="preserve"> <path d="M13,26c-0.256,0-0.512-0.098-0.707-0.293l-12-12c-0.391-0.391-0.391-1.023,0-1.414l12-12c0.391-0.391,1.023-0.391,1.414,0s0.391,1.023,0,1.414L2.414,13l11.293,11.293c0.391,0.391,0.391,1.023,0,1.414C13.512,25.902,13.256,26,13,26z"></path></svg>
             <span class="alt sr-only"></span>
           </span>
         </div>
         <div class="arrow next">
           <span class="svg svg-arrow-right">
-            <svg version="1.1" id="svg5-Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="14px" height="26px" viewBox="0 0 14 26" enable-background="new 0 0 14 26" xml:space="preserve"> </svg>
+            <svg version="1.1" id="svg5-Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="14px" height="26px" viewBox="0 0 14 26" enable-background="new 0 0 14 26" xml:space="preserve"> <path d="M1,0c0.256,0,0.512,0.098,0.707,0.293l12,12c0.391,0.391,0.391,1.023,0,1.414l-12,12c-0.391,0.391-1.023,0.391-1.414,0s-0.391-1.023,0-1.414L11.586,13L0.293,1.707c-0.391-0.391-0.391-1.023,0-1.414C0.488,0.098,0.744,0,1,0z"/> </svg>
             <span class="alt sr-only"></span>
           </span>
         </div>
@@ -123,6 +128,8 @@
     </div> 
   </section>
 </main>
+
+
     <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
