--- a/index.html
+++ b/index.html
@@ -1,367 +1,45 @@
-<!DOCTYPE html>
-<html lang="en-GB">
+    <!DOCTYPE html>
+<html>
 <head>
-<meta charset="UTF-8">  
-<link rel="shortcut icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/favicon-aec34940fbc1a6e787974dcd360f2c6b63348d4b1f4e06c77743096d55480f33.ico">
-<link rel="mask-icon" type="" href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" color="#111">
-<title>Edinglassie</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="css/style.css">
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"/>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans%3A400%2C400italic%2C600%2C700%2C700italic%7COswald%3A400%2C300%7CVollkorn%3A400%2C400italic">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-<script>
-  window.console = window.console || function(t) {};
-</script>
-<script>
-  if (document.location.search.match(/type=embed/gi)) {
-    window.parent.postMessage("resize", "*");
-  }
-</script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Carousel Template · Bootstrap v5.0</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
- <main class="main-content">
-  <section class="slideshow">
-    <div class="slideshow-inner">
-      <div class="slides">
-        <div class="slide is-active ">
-          <div class="slide-content">
-            <div class="caption">
-              <div class="title">Slide title 1</div>
-              <div class="text">
-                <p>Slide description 1</p>
-              </div> 
-              <a href="#" class="btn">
-                <span class="btn-inner">Learn More</span>
-              </a>
-            </div>
-          </div>
-          <div class="image-container"> 
-            <img src="images/bullocks.JPG" alt="" class="image" />
-          </div>
-        </div>
-        <div class="slide">
-          <div class="slide-content">
-            <div class="caption">
-              <div class="title">Slide title 2</div>
-              <div class="text">
-                <p>Slide description 2</p>
-              </div> 
-              <a href="#" class="btn">
-                <span class="btn-inner">Learn More</span>
-              </a>
-            </div>
-          </div>
-          <div class="image-container">
-            <img src="images/dou.JPG" alt="" class="image" />
-          </div>
-        </div>
-        <div class="slide">
-          <div class="slide-content">
-            <div class="caption">
-              <div class="title">Slide title 3</div>
-              <div class="text">
-                <p>Slide description 3</p>
-              </div> 
-              <a href="#" class="btn">
-                <span class="btn-inner">Learn More</span>
-              </a>
-            </div>
-          </div>
-          <div class="image-container">
-            <img src="images/bullocks.JPG" alt="" class="image" />
-          </div>
-        </div>
-        <div class="slide">
-          <div class="slide-content">
-            <div class="caption">
-              <div class="title">Slide title 4</div>
-              <div class="text">
-                <p>Slide description 4</p>
-              </div> 
-              <a href="#" class="btn">
-                <span class="btn-inner">Learn More</span>
-              </a>
-            </div>
-          </div>
-          <div class="image-container"> 
-            <img src="images/cattle.JPG" alt="" class="image" />
-          </div>
-        </div>
-      </div>
-      <div class="pagination">
-        <div class="item is-active"> 
-          <span class="icon">1</span>
-        </div>
-        <div class="item">
-          <span class="icon">2</span>
-        </div>
-        <div class="item">
-          <span class="icon">3</span>
-        </div>
-        <div class="item">
-          <span class="icon">4</span>
-        </div>
-      </div>
-      <div class="arrows">
-        <div class="arrow prev">
-          <span class="svg svg-arrow-left"></span>
-            <svg version="1.1" id="svg4-Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="14px" height="26px" viewBox="0 0 14 26" enable-background="new 0 0 14 26" xml:space="preserve"> <path d="M13,26c-0.256,0-0.512-0.098-0.707-0.293l-12-12c-0.391-0.391-0.391-1.023,0-1.414l12-12c0.391-0.391,1.023-0.391,1.414,0s0.391,1.023,0,1.414L2.414,13l11.293,11.293c0.391,0.391,0.391,1.023,0,1.414C13.512,25.902,13.256,26,13,26z"></path></svg>
-            <span class="alt sr-only"></span>
-          </span>
-        </div>
-        <div class="arrow next">
-          <span class="svg svg-arrow-right">
-            <svg version="1.1" id="svg5-Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="14px" height="26px" viewBox="0 0 14 26" enable-background="new 0 0 14 26" xml:space="preserve"> <path d="M1,0c0.256,0,0.512,0.098,0.707,0.293l12,12c0.391,0.391,0.391,1.023,0,1.414l-12,12c-0.391,0.391-1.023,0.391-1.414,0s-0.391-1.023,0-1.414L11.586,13L0.293,1.707c-0.391-0.391-0.391-1.023,0-1.414C0.488,0.098,0.744,0,1,0z"/> </svg>
-            <span class="alt sr-only"></span>
-          </span>
-        </div>
-      </div>
-    </div> 
-  </section>
-</main>
-
-
-    <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
-      <script id="rendered-js">
-var slideshowDuration = 4000;
-var slideshow = $('.main-content .slideshow');
-
-function slideshowSwitch(slideshow, index, auto) {
-  if (slideshow.data('wait')) return;
-
-  var slides = slideshow.find('.slide');
-  var pages = slideshow.find('.pagination');
-  var activeSlide = slides.filter('.is-active');
-  var activeSlideImage = activeSlide.find('.image-container');
-  var newSlide = slides.eq(index);
-  var newSlideImage = newSlide.find('.image-container');
-  var newSlideContent = newSlide.find('.slide-content');
-  var newSlideElements = newSlide.find('.caption > *');
-  if (newSlide.is(activeSlide)) return;
-
-  newSlide.addClass('is-new');
-  var timeout = slideshow.data('timeout');
-  clearTimeout(timeout);
-  slideshow.data('wait', true);
-  var transition = slideshow.attr('data-transition');
-  if (transition == 'fade') {
-    newSlide.css({
-      display: 'block',
-      zIndex: 2 });
-
-    newSlideImage.css({
-      opacity: 0 });
-
-
-    TweenMax.to(newSlideImage, 1, {
-      alpha: 1,
-      onComplete: function () {
-        newSlide.addClass('is-active').removeClass('is-new');
-        activeSlide.removeClass('is-active');
-        newSlide.css({ display: '', zIndex: '' });
-        newSlideImage.css({ opacity: '' });
-        slideshow.find('.pagination').trigger('check');
-        slideshow.data('wait', false);
-        if (auto) {
-          timeout = setTimeout(function () {
-            slideshowNext(slideshow, false, true);
-          }, slideshowDuration);
-          slideshow.data('timeout', timeout);}} });
-  } else {
-    if (newSlide.index() > activeSlide.index()) {
-      var newSlideRight = 0;
-      var newSlideLeft = 'auto';
-      var newSlideImageRight = -slideshow.width() / 8;
-      var newSlideImageLeft = 'auto';
-      var newSlideImageToRight = 0;
-      var newSlideImageToLeft = 'auto';
-      var newSlideContentLeft = 'auto';
-      var newSlideContentRight = 0;
-      var activeSlideImageLeft = -slideshow.width() / 4;
-    } else {
-      var newSlideRight = '';
-      var newSlideLeft = 0;
-      var newSlideImageRight = 'auto';
-      var newSlideImageLeft = -slideshow.width() / 8;
-      var newSlideImageToRight = '';
-      var newSlideImageToLeft = 0;
-      var newSlideContentLeft = 0;
-      var newSlideContentRight = 'auto';
-      var activeSlideImageLeft = slideshow.width() / 4;
-    }
-
-    newSlide.css({
-      display: 'block',
-      width: 0,
-      right: newSlideRight,
-      left: newSlideLeft,
-      zIndex: 2 });
-
-
-    newSlideImage.css({
-      width: slideshow.width(),
-      right: newSlideImageRight,
-      left: newSlideImageLeft });
-
-
-    newSlideContent.css({
-      width: slideshow.width(),
-      left: newSlideContentLeft,
-      right: newSlideContentRight });
-
-
-    activeSlideImage.css({
-      left: 0 });
-
-
-    TweenMax.set(newSlideElements, { y: 20, force3D: true });
-    TweenMax.to(activeSlideImage, 1, {
-      left: activeSlideImageLeft,
-      ease: Power3.easeInOut });
-
-
-    TweenMax.to(newSlide, 1, {
-      width: slideshow.width(),
-      ease: Power3.easeInOut });
-
-
-    TweenMax.to(newSlideImage, 1, {
-      right: newSlideImageToRight,
-      left: newSlideImageToLeft,
-      ease: Power3.easeInOut });
-
-
-    TweenMax.staggerFromTo(newSlideElements, 0.8, { alpha: 0, y: 60 }, { alpha: 1, y: 0, ease: Power3.easeOut, force3D: true, delay: 0.6 }, 0.1, function () {
-      newSlide.addClass('is-active').removeClass('is-new');
-      activeSlide.removeClass('is-active');
-      newSlide.css({
-        display: '',
-        width: '',
-        left: '',
-        zIndex: '' });
-
-
-      newSlideImage.css({
-        width: '',
-        right: '',
-        left: '' });
-
-
-      newSlideContent.css({
-        width: '',
-        left: '' });
-
-
-      newSlideElements.css({
-        opacity: '',
-        transform: '' });
-
-
-      activeSlideImage.css({
-        left: '' });
-
-
-      slideshow.find('.pagination').trigger('check');
-      slideshow.data('wait', false);
-      if (auto) {
-        timeout = setTimeout(function () {
-          slideshowNext(slideshow, false, true);
-        }, slideshowDuration);
-        slideshow.data('timeout', timeout);
-      }
-    });
-  }
-}
-
-function slideshowNext(slideshow, previous, auto) {
-  var slides = slideshow.find('.slide');
-  var activeSlide = slides.filter('.is-active');
-  var newSlide = null;
-  if (previous) {
-    newSlide = activeSlide.prev('.slide');
-    if (newSlide.length === 0) {
-      newSlide = slides.last();
-    }
-  } else {
-    newSlide = activeSlide.next('.slide');
-    if (newSlide.length == 0)
-    newSlide = slides.filter('.slide').first();
-  }
-
-  slideshowSwitch(slideshow, newSlide.index(), auto);
-}
-
-function homeSlideshowParallax() {
-  var scrollTop = $(window).scrollTop();
-  if (scrollTop > windowHeight) return;
-  var inner = slideshow.find('.slideshow-inner');
-  var newHeight = windowHeight - scrollTop / 2;
-  var newTop = scrollTop * 0.8;
-
-  inner.css({
-    transform: 'translateY(' + newTop + 'px)', height: newHeight });
-
-}
-
-$(document).ready(function () {
-  $('.slide').addClass('is-loaded');
-
-  $('.slideshow .arrows .arrow').on('click', function () {
-    slideshowNext($(this).closest('.slideshow'), $(this).hasClass('prev'));
-  });
-
-  $('.slideshow .pagination .item').on('click', function () {
-    slideshowSwitch($(this).closest('.slideshow'), $(this).index());
-  });
-
-  $('.slideshow .pagination').on('check', function () {
-    var slideshow = $(this).closest('.slideshow');
-    var pages = $(this).find('.item');
-    var index = slideshow.find('.slides .is-active').index();
-    pages.removeClass('is-active');
-    pages.eq(index).addClass('is-active');
-  });
-
-  /* Lazyloading
-  $('.slideshow').each(function(){
-    var slideshow=$(this);
-    var images=slideshow.find('.image').not('.is-loaded');
-    images.on('loaded',function(){
-      var image=$(this);
-      var slide=image.closest('.slide');
-      slide.addClass('is-loaded');
-    });
-  */
-
-  var timeout = setTimeout(function () {
-    slideshowNext(slideshow, false, true);
-  }, slideshowDuration);
-
-  slideshow.data('timeout', timeout);
-});
-
-if ($('.main-content .slideshow').length > 1) {
-  $(window).on('scroll', homeSlideshowParallax);
-}
-//# sourceURL=pen.js
-    </script>
-
-  
-
-
-
-
- 
-</body></html>
+<div class='blurImg'>
+  <div style="background-image: url('https://d262ilb51hltx0.cloudfront.net/fit/c/1600/1280/gradv/29/81/60/darken/25/1*4ncz3hLxmL8E_bUh-0z62w.jpeg')"></div>
+  <div class='blur' style="background-image: url('https://d262ilb51hltx0.cloudfront.net/fit/c/1600/1280/gradv/29/81/40/darken/50/blur/50/1*4ncz3hLxmL8E_bUh-0z62w.jpeg')"></div>
+</div>
+<header>
+  <div>
+    <h1>
+      Medium
+    </h1>
+    <p>
+      Everyone’s stories and ideas
+    </p>
+    <a href='https://medium.com/' title='Medium'>Learn more</a>
+  </div>
+  <nav role='navigation'>
+    <ul>
+      <li>
+        <a class='active' href='#'>Reading List</a>
+      </li>
+      <li>
+        <a href='#'>Bookmarks</a>
+      </li>
+      <li>
+        <a href='#'>Top 100</a>
+      </li>
+    </ul>
+  </nav>
+</header>
+<div class='container'>
+  <div></div>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="js/script.js"></script>
+</body>
+</html>
